# pgzip

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
.devcontainer/: devcontainer.json
.github/workflows/: codeql-analysis.yml  python-tests.yml
pgzip/: __init__.py  __main__.py  pgzip.py
tests/: test_pgzip.py
